# adsolve_utilities

./: .gitignore  README.md  pyproject.toml  requirements.txt
adsolve_utils/: __init__.py
evaluation_bundles/: chest_xray_report_generation.py  court_case_summarisation_evaluation.py  maira_with_indication_mimic_evaluation.json  social_media_summarisation_evaluation.py  test_metrics.ipynb
evaluation_bundles/metrics/: bertscore.py  cross_nli.py  evidence_appropriateness.py  fact.py  fc.py  greenscore.py  intra_nli.py  mhic.py  readability_metric.py  rouge.py  style_roberta.py
evaluation_bundles/metrics/cache/: UK_court_30claims.json  iqra_layer_2.json  iqra_layer_2_30claims.json
evaluation_bundles/metrics/fact/: claim_verification.py  claim_verification_results.json  iqra_summaries_recall_example.json  mushroom.py  output_decomposed_claims.json  run_nero.py  sanity_check_claims.json  sanity_check_reference.json  test_recall_example.json  true.py  try_mushroom.py  uksc-2009-0105_recall_example.json  uksc-2015-0177_recall_example.json
models/: README.md  generation_examples.ipynb  hf_token.txt  summary_generation_with_autoclass.py
models/prompts/: clpsych2025_post_level.yaml  clpsych2025_timeline_level.yaml  clpsych2025_timeline_summarisation.yaml  jsong_temporal_reasoning_diagnosis.yaml  jsong_temporal_reasoning_iip.yaml  jsong_temporal_reasoning_moc.yaml  jsong_temporal_reasoning_summarisation.yaml  jsong_temporal_reasoning_summarise.yaml  load_prompt.py
