[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adsolve-utils"              # the pip install name
version = "0.1.0"
description = "Utilities developed within the AdSoLve project for LLM generation and evaluation."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Sebastian Lobbers", email = "s.lobbers@qmul.ac.uk" }]

[project.urls]
Repository = "https://github.com/Maria-Liakata-NLP-Group/adsolve_utilities"

# If you have deps, add them back here:
# dependencies = ["pyyaml>=6.0", "transformers>=4.44", "torch>=2.2"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*", "**/__pycache__"]

# Include your YAML/JSON prompt files in the wheel (optional)
[tool.setuptools.package-data]
models = ["prompts/*.yaml", "example_data/*.json"]
