[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adsolve-utils"              # the pip install name
version = "0.1.0"
description = "Utilities developed within the AdSoLve project for LLM generation and evaluation."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Sebastian Lobbers", email = "s.lobbers@qmul.ac.uk" }]

# Put only your *direct runtime* deps here; use sensible lower bounds
dependencies = [
  "bert-score>=0.3.13",
  "datasets>=4.0.0",
  "nltk>=3.9.1",
  "numpy>=2.3",
  "pandas>=2.3",
  "peft>=0.15.2",
  "PyYAML>=6.0",
  "readability-lxml>=0.8.4",
  "spacy>=3.8",
  "tqdm>=4.67",
  "transformers>=4.52",
  # See Torch note below — often better as an extra
]

[project.optional-dependencies]
# Let users choose their Torch build (CPU/CUDA) explicitly:
torch = ["torch>=2.7"]

[project.urls]
Repository = "https://github.com/Maria-Liakata-NLP-Group/adsolve_utilities"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*", "**/__pycache__"]

# Include your YAML/JSON prompt files in the wheel (optional)
[tool.setuptools.package-data]
models = ["prompts/*.yaml", "example_data/*.json"]
